# OGPy

./: .age.toml  CHANGES.rst  README.rst  Taskfile.yaml  pyproject.toml
.github/: release-body.md
.github/workflows/: main.yml  release.yml
docs/: api.rst  commandline.rst  conf.py  console.rst  index.rst  library.rst
docs/adapter/: sphinx.rst
docs/adapters/: sphinx.rst
src/ogpy/: __init__.py  client.py  console.py  parser.py  types.py
src/ogpy/adapter/: sphinx.py
src/ogpy/adapters/: sphinx.py
src/ogpy/client/: __init__.py  browser.py
tests/: test_browser.py  test_client.py  test_parser.py
tests/roots/test-default/: conf.py  index.rst
tests/test_adapter/: test_sphinx.py
tests/test_adapters/: test_sphinx.py
