[project]
name = "ogpy"
version = "0.0.0"
description = "Modern consumer of Open Graph protocol"
readme = "README.rst"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "esbonio>=0.16.5",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-intl>=2.3.1",
]
